--- a/deny.toml
+++ b/deny.toml
@@ -72,6 +72,7 @@ feature-depth = 1
 ignore = [
     "RUSTSEC-2023-0051",
     "RUSTSEC-2024-0384",
+    "RUSTSEC-2024-0370",
     #"RUSTSEC-0000-0000",
     #{ id = "RUSTSEC-0000-0000", reason = "you can specify a reason the advisory is ignored" },
     #"a-crate-that-is-yanked@0.1.1", # you can also ignore yanked crate versions if you wish
@@ -104,7 +105,7 @@ allow = [
     "Zlib",
     #"MIT",
     #"Apache-2.0",
-    #"Apache-2.0 WITH LLVM-exception",
+    "Apache-2.0 WITH LLVM-exception",
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
