--- a/deny.toml
+++ b/deny.toml
@@ -93,6 +93,7 @@ ignore = [
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 allow = [
     "MIT",
+    "BSL-1.0",
     "Apache-2.0",
     "Unicode-DFS-2016",
     "MPL-2.0",
