--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,14 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
+anyhow = "1.0.95"
+dirs = "5.0.1"
+log = "0.4.22"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri = { version = "2", features = [] }
+tauri-plugin-clipboard-manager = "2.2.0"
+tauri-plugin-log = { version = "2.2.0", features = ["colored"] }
+tauri-plugin-opener = "2"
+tauri-plugin-window-state = "2.2.0"
+tracing = { version = "0.1.41", features = ["log"] }
