--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,7 @@ dirs = "5.0.1"
 log = "0.4.22"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-clipboard-manager = "2.2.0"
 tauri-plugin-log = { version = "2.2.0", features = ["colored"] }
 tauri-plugin-opener = "2"
